--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.8.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "body-parser": "latest"
   }
 }
